# MLOPs-Project-01

./: .dockerignore  .gitignore  README.md  crashcourse.txt  projectflow.txt  pyproject.toml  requirements.txt  setup.py
config/: MongoDB_configurations.txt
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/components/: model_evaluation.py  model_trainer.py
src/configuration/: aws_connection.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
